<resources>
    <string name="app_name">Praktikum 1 - Anime Info Apps</string>
    <string name="one_piece">One Piece</string>
    <string name="rent">Rent</string>
    <string name="buy">Buy</string>
    <string name="rating">4,9</string>
    <string name="type">Family</string>
    <string name="percentage">97%</string>
    <string name="familiarity">Similar</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse hendrerit ex ac risus pharetra semper in a nibh. Vivamus nunc sapien, porta vel rutrum vel, aliquet non sapien. Suspendisse lobortis mauris ut ligula malesuada pretium. Interdum et malesuada fames ac ante ipsum primis in faucibus. Quisque luctus consequat nisi, et interdum ligula consequat sed. Cras hendrerit eget metus quis vestibulum. Nullam eu nisl porta, pharetra tellus ac, lacinia lorem. Vestibulum aliquam id massa at molestie. Vivamus quis facilisis mauris. Pellentesque convallis in magna a tincidunt. Maecenas ac eros a neque pharetra dapibus ac ac ante. Mauris at lacus leo. Suspendisse vitae blandit eros, quis vehicula quam.\n\nCurabitur odio sapien, pulvinar non magna quis, mollis malesuada quam. Praesent pellentesque, nisl vitae tristique laoreet, nibh nibh tincidunt risus, sit amet blandit dui odio et sapien. Morbi sed mauris a urna aliquam ultricies. Etiam ut eros nunc. Vestibulum tristique erat quis neque aliquet, eget congue mauris feugiat. Cras eleifend quam nunc, quis pharetra velit condimentum sit amet. Nunc ac lectus in dolor efficitur placerat. Praesent hendrerit dui nec ante consectetur, id venenatis turpis pulvinar. Pellentesque non venenatis tellus, vel tincidunt sapien. Aliquam consectetur tempor odio, sed feugiat eros tempus sit amet. Sed non orci justo. Pellentesque quis imperdiet dolor.\n\nPellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla lobortis eleifend dolor, vitae cursus ipsum lacinia at. Ut vehicula ullamcorper justo non scelerisque. Mauris sed quam quis augue aliquet dignissim in eu elit. Fusce egestas viverra dolor ullamcorper hendrerit. Aenean ultricies ligula et finibus aliquam. Sed eget ligula vel est iaculis egestas ac ac dui. Nulla facilisi. Ut efficitur finibus nibh, a elementum est egestas vitae. Nullam rutrum metus sit amet est efficitur, et faucibus lorem luctus. Fusce purus mi, bibendum eu mattis at, dictum eu nunc.</string>
</resources>